Adjust for JDK 21, update to OpenJPA 4.1.1, Derby 16.1.1, keep Junit 5 until POI switches
Adjust string-formatting